# Marine_Domain_RAG

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
notebooks/: 01_demo_pipeline.ipynb
reports/: decompose_ablation_skip_llm.json  llm_cost_quality.json  retrieval_vs_llm_skip_llm.json
scripts/: eval_decompose_ablation.py  eval_llm_cost_quality.py  eval_retrieval_vs_llm.py
src/marine_domain_rag/: cli.py  config.py
src/marine_domain_rag/collectors/: law_client.py
src/marine_domain_rag/evaluation/: qa_eval.py  retrieval_vs_llm.py
src/marine_domain_rag/graph/: builder.py
src/marine_domain_rag/indexing/: embed_index.py
src/marine_domain_rag/langgraph_app/: decompose.py  workflow.py
src/marine_domain_rag/llm/: exaone_loader.py
src/marine_domain_rag/parsing/: article_parser.py
tests/: qa_pairs.yaml
